--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "@heroicons/react": "^2.1.1",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18",
-    "react-social-icons": "^6.10.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
